# autonomous-racing-pipeline

./: .gitignore  README.md  lev_l_centerline.csv  traj_race_cl.csv
src/bc_policy/: config.yaml  final_model.onnx  final_model.onnx.data  inference_node.py  run.sh
src/robo_arp/: CMakeLists.txt  package.xml  setup.py
src/robo_arp/config/: params.yaml  slam_params.yaml
src/robo_arp/launch/: hardware.launch.py  sim.launch.py
src/robo_arp/robo_arp/: coordinator_node.py  map_processor_node.py  pure_pursuit_node.py  safety_monitor_node.py  slam_monitor_node.py  wall_follower_wrapper_node.py
src/robo_arp/scripts/: coordinator_node  extract_centerline.py  generate_centerline.py  map_processor_node  pure_pursuit_node  safety_monitor_node  slam_monitor_node  wall_follower_wrapper_node
src/robo_arp_interfaces/: CMakeLists.txt  package.xml
src/robo_arp_interfaces/action/: RunLap.action
src/robo_arp_interfaces/srv/: ProcessMap.srv  SaveMap.srv  SetActive.srv
src/wall_follow_arp/: CMakeLists.txt  package.xml  wall_follow.cpp
