<?xml version="1.0"?>
<package format="3">
  <name>robo_arp</name>
  <version>0.0.1</version>
  <description>ESE6150 autonomous racing pipeline</description>
  <maintainer email="pmduarte@seas.upenn.edu">Phillip Duarte</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2_ros</depend>
  <depend>robo_arp_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
